# chaotic-encryption-survey

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Notes  Notes.txt  README.md  Vagrantfile  bench_results.csv  cipher_aes.h  cipher_chaos.h  journals.txt  main.cpp  out.txt  paper_draft.md  paper_final.md  q1.out  summary.out  summary.out2
archive/legacy-chaos-ref-v1/: CMakeLists.txt  bench_chaos_kernels.sh  bench_common.h  cipher_chacha.h  cipher_chaos.h  main.cpp
archive/legacy-chaos-ref-v1/chaos/: chaos_fridrich.h  chaos_multid.h
chaos/: chaos_common.h  chaos_fridrich.h  chaos_multid.h
docs/: claim_boundary.md  jrtip_real_time_pivot.md  paper1_draft.md  paper1_scope_and_plan.md  paper2_scope_and_plan.md  pipeline_commonality_buckets.md  rejection_recovery_plan.md  sota_chaotic_image_encryption.md  sota_matrix_2022_2026.md
images/datasets/real/kodak/: README.txt
images/datasets/smoke/: gradient_64x64.ppm
images/datasets/synthetic/: gradient_1024x1024.ppm  gradient_512x512.ppm  noise_1024x1024.ppm  noise_512x512.ppm  texture_1024x1024.ppm  texture_512x512.ppm
include/chaosref/: bench.hpp  catalog.hpp  chaotic_rng.hpp  diffusion.hpp  permutation.hpp  schemes.hpp  types.hpp
paper/access/: README.md  access_paper.tex  svglov3.clo
paper/access/bst/: sn-apacite.bst  sn-nature.bst
results/: bench.csv  candidate_schemes.csv  literature_metrics.csv  security_summary.md  stage_bench.csv
results/blake3_smoke/: bench.csv  security_summary.md
results/fast_candidate_smoke/: candidate_schemes.csv  security_summary.md
results/final/: analysis.csv  bench.csv  bench_stats.csv  candidate_schemes.csv  candidate_stats.csv  dataset_manifest.csv  generated_paper_outline.md  metadata.md  performance_summary.md  precision_orbits.csv  precision_summary.md  stage_bench.csv  stage_stats.csv  tables.md
results/final/raw/candidates__gradient_1024x1024__rep1/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep10/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep2/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep3/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep4/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep5/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep6/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep7/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep8/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_1024x1024__rep9/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep1/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep10/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep2/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep3/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep4/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep5/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep6/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep7/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep8/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_2048x2048__rep9/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_512x512__rep1/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_512x512__rep10/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_512x512__rep2/: candidate_schemes.csv  security_summary.md
results/final/raw/candidates__gradient_512x512__rep3/: candidate_schemes.csv  security_summary.md
results/final_smoke/: analysis.csv  bench.csv  bench_stats.csv  candidate_schemes.csv  candidate_stats.csv  performance_summary.md  stage_bench.csv  stage_stats.csv  tables.md
results/jrtip_realtime/: analysis.csv  bench.csv  bench_stats.csv  candidate_schemes.csv  candidate_stats.csv  metadata.md  real_time_metrics.csv  stage_bench.csv  stage_stats.csv  summary.out  tables.md
results/jrtip_realtime_arm/: bench.csv  bench_stats.csv  candidate_schemes.csv  candidate_stats.csv  dataset_manifest.csv  generated_paper_outline.md  metadata.md  performance_summary.md  real_time_metrics.csv  stage_bench.csv  stage_stats.csv  tables.md
results/paper1_20260524_201251/: paper1_combined.csv  paper1_draft_filled.md  paper1_tables.md  scalar_build_256.csv  simd_build_256.csv
results/real_smoke/: analysis.csv  bench.csv  bench_stats.csv  candidate_schemes.csv  candidate_stats.csv  metadata.md  performance_summary.md  stage_bench.csv  stage_stats.csv  tables.md
results/stage_suite_smoke/: analysis.csv  bench.csv  candidate_schemes.csv  security_summary.md  stage_bench.csv
results/suite_smoke/: bench.csv  security_summary.md
scripts/: download_real_datasets.py  download_video_frames.py  generate_publication_plots.py  generate_synthetic_dataset.py  make_paper_outputs.py  paired_speedup_analysis.py  paper1_fill_draft.py  paper1_make_stage_tables.py  paper1_make_tables.py  paper1_run_matrix.sh  plot_requirements.txt  run_bench_matrix.sh  run_cross_arch_publication.sh  run_image_suite.sh  run_paper_ready_experiments.sh
src/: bench_main.cpp  main.cpp
src/analysis/: Metrics.hpp
src/core/: IImageCipher.hpp  StageSuite.hpp  Utils.hpp
src/crypto/: EvpCiphers.hpp
src/scalar/: ChaoticCiphers.hpp
src/simd/avx2/: Xor.hpp
tests/: evp_cipher_tests.cpp  reference_tests.cpp
(+3639 files in other folders)
